--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # HCDP API Configuration
 HCDP_API_TOKEN=your_api_token_here
-HCDP_BASE_URL=https://ikeauth.its.hawaii.edu/files/v2/download/public
+HCDP_BASE_URL=https://api.hcdp.ikewai.org
